@@ -14,7 +14,18 @@ if WITH_ZLIB
 execdrivers_LTLIBRARIES += exmpp_compress_zlib.la
 endif
 
-EXTRA_DIST = contrib/hashtable.h contrib/hashtable_private.h		\
+KNOWN_NSS_SOURCE   ?= $(srcdir)/xmpp_ns.h.in
+KNOWN_NAMES_SOURCE ?= $(srcdir)/xmpp_names.h.in
+KNOWN_ATTRS_SOURCE ?= $(srcdir)/xmpp_attrs.h.in
+
+MAKE_SCHEMAS_LIST = $(srcdir)/make-schemas-urls-list
+EXTRACT_KNOWN = $(srcdir)/extract-known-from-schemas
+
+EXTRA_DIST = $(MAKE_SCHEMAS_LIST) $(EXTRACT_KNOWN)			\
+	     $(KNOWN_NSS_SOURCE)-local					\
+	     $(KNOWN_NAMES_SOURCE)-local				\
+	     $(KNOWN_ATTRS_SOURCE)-local				\
+	     contrib/hashtable.h contrib/hashtable_private.h		\
 	     xmpp_ns.h.awk xmpp_ns.h.in					\
 	     xmpp_names.h.awk xmpp_names.h.in				\
 	     xmpp_attrs.h.awk xmpp_attrs.h.in				\
@@ -41,11 +52,6 @@ execdriversdir = $(ERLANG_INSTALL_LIB_DIR_exmpp)/priv/lib
 # --------------------------------------------------------------------
 
 # Expat port driver.
-
-KNOWN_NSS_SOURCE ?= $(srcdir)/xmpp_ns.h.in
-KNOWN_NAMES_SOURCE ?= $(srcdir)/xmpp_names.h.in
-KNOWN_ATTRS_SOURCE ?= $(srcdir)/xmpp_attrs.h.in
-
 xmpp_ns.h: $(srcdir)/xmpp_ns.h.awk $(KNOWN_NSS_SOURCE)
 	$(AWK) -f $(srcdir)/xmpp_ns.h.awk $(KNOWN_NSS_SOURCE) > $@
 
@@ -96,9 +102,6 @@ exmpp_compress_zlib_la_SOURCES = exmpp_compress.h			\
 # Known namespaces/names/attributes updates.
 # --------------------------------------------------------------------
 
-MAKE_SCHEMAS_LIST = $(srcdir)/make-schemas-urls-list
-EXTRACT_KNOWN = $(srcdir)/extract-known-from-schemas
-
 updateknown: $(MAKE_SCHEMAS_LIST) $(EXTRACT_KNOWN)
 	$(MAKE_SCHEMAS_LIST) | $(EXTRACT_KNOWN) $(KNOWN_NSS_SOURCE) $(KNOWN_NAMES_SOURCE) $(KNOWN_ATTRS_SOURCE)
 	@echo >> $(KNOWN_NSS_SOURCE)
@@ -106,16 +109,19 @@ updateknown: $(MAKE_SCHEMAS_LIST) $(EXTRACT_KNOWN)
 	@echo >> $(KNOWN_NSS_SOURCE)
 	cat $(KNOWN_NSS_SOURCE)-local >> $(KNOWN_NSS_SOURCE)
 	@echo >> $(KNOWN_NSS_SOURCE)
-	@echo "# vim:ft=conf:" >> $(KNOWN_NSS_SOURCE)
+	@echo -n "# vim" >> $(KNOWN_NSS_SOURCE)
+	@echo ":ft=conf:" >> $(KNOWN_NSS_SOURCE)
 	@echo >> $(KNOWN_NAMES_SOURCE)
 	@echo "# FROM: $(KNOWN_NAMES_SOURCE)-local" >> $(KNOWN_NAMES_SOURCE)
 	@echo >> $(KNOWN_NAMES_SOURCE)
 	cat $(KNOWN_NAMES_SOURCE)-local >> $(KNOWN_NAMES_SOURCE)
 	@echo >> $(KNOWN_NAMES_SOURCE)
-	@echo "# vim:ft=conf:" >> $(KNOWN_NAMES_SOURCE)
+	@echo -n "# vim" >> $(KNOWN_NAMES_SOURCE)
+	@echo ":ft=conf:" >> $(KNOWN_NAMES_SOURCE)
 	@echo >> $(KNOWN_ATTRS_SOURCE)
 	@echo "# FROM: $(KNOWN_ATTRS_SOURCE)-local" >> $(KNOWN_ATTRS_SOURCE)
 	@echo >> $(KNOWN_ATTRS_SOURCE)
 	cat $(KNOWN_ATTRS_SOURCE)-local >> $(KNOWN_ATTRS_SOURCE)
 	@echo >> $(KNOWN_ATTRS_SOURCE)
-	@echo "# vim:ft=conf:" >> $(KNOWN_ATTRS_SOURCE)
+	@echo -n "# vim" >> $(KNOWN_ATTRS_SOURCE)
+	@echo ":ft=conf:" >> $(KNOWN_ATTRS_SOURCE)
